versions/v3.6.0/doxygen/html/group__bluetooth.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/group__bluetooth.html
original_path: doxygen/html/group__bluetooth.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Bluetooth APIs

[Connectivity](group__connectivity.md)

Bluetooth APIs.
[More...](#details)

| Topics | |
| --- | --- |
|  | [AUDIO](group__BT__AUDIO__CODEC__LC3.md) |
|  | LC3. |
|  | [Attribute Protocol (ATT)](group__bt__att.md) |
|  | Attribute Protocol (ATT). |
|  | [Audio Input Control Service (AICS)](group__bt__gatt__aics.md) |
|  | Audio Input Control Service (AICS). |
|  | [Battery Service (BAS)](group__bt__bas.md) |
|  | Battery Service (BAS). |
|  | [Bluetooth Audio](group__bt__audio.md) |
|  | Bluetooth Audio. |
|  | [Bluetooth Basic Audio Profile](group__bt__bap.md) |
|  | Bluetooth Basic Audio Profile (BAP). |
|  | [Bluetooth Controller](group__bt__ctrl.md) |
|  | Bluetooth Controller. |
|  | [Bluetooth Gaming Audio Profile](group__bt__gmap.md) |
|  | Bluetooth Gaming Audio Profile (GMAP). |
|  | [Bluetooth Mesh](group__bt__mesh.md) |
|  | Bluetooth Mesh. |
|  | [Bluetooth testing callbacks](group__bt__test__cb.md) |
|  | Bluetooth testing. |
|  | [Byteorder](group__bt__byteorder.md) |
|  | Byteorder. |
|  | [Common Audio Profile (CAP)](group__bt__cap.md) |
|  | Common Audio Profile (CAP). |
|  | [Connection management](group__bt__conn.md) |
|  | Connection management. |
|  | [Coordinated Set Identification Profile (CSIP)](group__bt__gatt__csip.md) |
|  | Copyright (c) 2021-2022 Nordic Semiconductor ASA. |
|  | [Cryptography](group__bt__crypto.md) |
|  | Cryptography. |
|  | [Data buffers](group__bt__buf.md) |
|  | Data buffers. |
|  | [Device Address](group__bt__addr.md) |
|  | Bluetooth device address definitions and utilities. |
|  | [Encrypted Advertising Data (EAD)](group__bt__ead.md) |
|  | Encrypted Advertising Data (EAD). |
|  | [Generic Access Profile (GAP)](group__bt__gap.md) |
|  | Generic Access Profile (GAP). |
|  | [Generic Attribute Profile (GATT)](group__bt__gatt.md) |
|  | Generic Attribute Profile (GATT). |
|  | [HCI RAW channel](group__hci__raw.md) |
|  | HCI RAW channel. |
|  | [HCI drivers](group__bt__hci__driver.md) |
|  | HCI drivers. |
|  | [Hands Free Profile (HFP)](group__bt__hfp.md) |
|  | Hands Free Profile (HFP). |
|  | [Hearing Access Service (HAS)](group__bt__has.md) |
|  | Hearing Access Service (HAS). |
|  | [Heart Rate Service (HRS)](group__bt__hrs.md) |
|  | Heart Rate Service (HRS). |
|  | [Immediate Alert Service (IAS)](group__bt__ias.md) |
|  | Immediate Alert Service (IAS). |
|  | [Isochronous channels (ISO)](group__bt__iso.md) |
|  | Isochronous channels (ISO). |
|  | [L2CAP](group__bt__l2cap.md) |
|  | L2CAP. |
|  | [Media Control Client (MCC)](group__bt__gatt__mcc.md) |
|  | Bluetooth Media Control Client (MCC) interface. |
|  | [Media Control Service (MCS)](group__bt__mcs.md) |
|  | Media Control Service (MCS). |
|  | [Media Proxy](group__bt__media__proxy.md) |
|  | Media proxy module. |
|  | [Microphone Control Profile (MICP)](group__bt__gatt__micp.md) |
|  | Microphone Control Profile (MICP). |
|  | [Object Transfer Service (OTS)](group__bt__ots.md) |
|  | Object Transfer Service (OTS). |
|  | [Public Broadcast Profile (PBP)](group__bt__pbp.md) |
|  | Public Broadcast Profile (PBP). |
|  | [RFCOMM](group__bt__rfcomm.md) |
|  | RFCOMM. |
|  | [Service Discovery Protocol (SDP)](group__bt__sdp.md) |
|  | [UUIDs](group__bt__uuid.md) |
|  | UUIDs. |
|  | [Volume Control Profile (VCP)](group__bt__gatt__vcp.md) |
|  | Volume Control Profile (VCP). |
|  | [Volume Offset Control Service (VOCS)](group__bt__gatt__vocs.md) |
|  | Volume Offset Control Service (VOCS). |

## Detailed Description

Bluetooth APIs.

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
