versions/v4.0.0/doxygen/html/group__bluetooth.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/doxygen/html/group__bluetooth.html
original_path: doxygen/html/group__bluetooth.html
---

| Logo | Zephyr API Documentation 4.0.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Bluetooth APIs

[Connectivity](group__connectivity.md)

Bluetooth APIs.
[More...](#details)

| Topics | |
| --- | --- |
|  | [Attribute Protocol (ATT)](group__bt__att.md) |
|  | Attribute Protocol (ATT). |
|  | [Audio Input Control Service (AICS)](group__bt__aics.md) |
|  | Audio Input Control Service (AICS). |
|  | [Basic Audio Profile (BAP) LC3 Presets](group__bt__bap__lc3__preset.md) |
|  | Basic Audio Profile (BAP) LC3 Presets. |
|  | [Battery Service (BAS)](group__bt__bas.md) |
|  | Battery Service (BAS). |
|  | [BlueNRG HCI driver extended API](group__bluenrg__hci__driver.md) |
|  | BlueNRG HCI Driver-Specific API. |
|  | [Bluetooth Audio](group__bt__audio.md) |
|  | Bluetooth Audio. |
|  | [Bluetooth Basic Audio Profile](group__bt__bap.md) |
|  | Bluetooth Basic Audio Profile (BAP). |
|  | [Bluetooth Content Control Identifier](group__bt__ccid.md) |
|  | Bluetooth Content Control Identifier (CCID). |
|  | [Bluetooth Controller](group__bt__ctrl.md) |
|  | Bluetooth Controller. |
|  | [Bluetooth Gaming Audio Profile](group__bt__gmap.md) |
|  | Bluetooth Gaming Audio Profile (GMAP). |
|  | [Bluetooth HCI APIs](group__bt__hci__api.md) |
|  | Bluetooth HCI APIs. |
|  | [Bluetooth LC3 codec](group__bt__lc3.md) |
|  | LC3. |
|  | [Bluetooth Mesh](group__bt__mesh.md) |
|  | Bluetooth Mesh. |
|  | [Byteorder](group__bt__byteorder.md) |
|  | Byteorder. |
|  | [Channel Sounding (CS)](group__bt__le__cs.md) |
|  | LE Channel Sounding (CS). |
|  | [Common Audio Profile (CAP)](group__bt__cap.md) |
|  | Common Audio Profile (CAP). |
|  | [Connection management](group__bt__conn.md) |
|  | Connection management. |
|  | [Coordinated Set Identification Profile (CSIP)](group__bt__csip.md) |
|  | Coordinated Set Identification Profile (CSIP). |
|  | [Cryptography](group__bt__crypto.md) |
|  | Cryptography. |
|  | [Current Time Service (CTS)](group__bt__cts.md) |
|  | Current Time Service (CTS). |
|  | [Data buffers](group__bt__buf.md) |
|  | Data buffers. |
|  | [Device Address](group__bt__addr.md) |
|  | Bluetooth device address definitions and utilities. |
|  | [Encrypted Advertising Data (EAD)](group__bt__ead.md) |
|  | Encrypted Advertising Data (EAD). |
|  | [Gaming Audio Profile (GMAP) LC3 Presets](group__bt__gmap__lc3__preset.md) |
|  | Gaming Audio Profile (GMAP) LC3 Presets. |
|  | [Generic Access Profile (GAP)](group__bt__gap.md) |
|  | Generic Access Profile (GAP). |
|  | [Generic Attribute Profile (GATT)](group__bt__gatt.md) |
|  | Generic Attribute Profile (GATT). |
|  | [HCI RAW channel](group__hci__raw.md) |
|  | HCI RAW channel. |
|  | [HCI drivers](group__bt__hci__driver.md) |
|  | HCI drivers. |
|  | [Hands Free Profile (HFP)](group__bt__hfp.md) |
|  | Hands Free Profile (HFP). |
|  | [Hands Free Profile - Audio Gateway (HFP-AG)](group__bt__hfp__ag.md) |
|  | Hands Free Profile - Audio Gateway (HFP-AG). |
|  | [Hearing Access Service (HAS)](group__bt__has.md) |
|  | Hearing Access Service (HAS). |
|  | [Heart Rate Service (HRS)](group__bt__hrs.md) |
|  | Heart Rate Service (HRS). |
|  | [Immediate Alert Service (IAS)](group__bt__ias.md) |
|  | Immediate Alert Service (IAS). |
|  | [Isochronous channels (ISO)](group__bt__iso.md) |
|  | Isochronous channels (ISO). |
|  | [L2CAP](group__bt__l2cap.md) |
|  | L2CAP. |
|  | [Media Control Client (MCC)](group__bt__mcc.md) |
|  | Bluetooth Media Control Client (MCC) interface. |
|  | [Media Control Service (MCS)](group__bt__mcs.md) |
|  | Media Control Service (MCS). |
|  | [Media Proxy](group__bt__media__proxy.md) |
|  | Media proxy module. |
|  | [Microphone Control Profile (MICP)](group__bt__micp.md) |
|  | Microphone Control Profile (MICP). |
|  | [Object Transfer Service (OTS)](group__bt__ots.md) |
|  | Object Transfer Service (OTS). |
|  | [Public Broadcast Profile (PBP)](group__bt__pbp.md) |
|  | Public Broadcast Profile (PBP). |
|  | [Published Audio Capabilities Service (PACS)](group__bt__pacs.md) |
|  | Published Audio Capabilities Service (PACS). |
|  | [RFCOMM](group__bt__rfcomm.md) |
|  | RFCOMM. |
|  | [Service Discovery Protocol (SDP)](group__bt__sdp.md) |
|  | [Telephone Bearer Service (TBS)](group__bt__tbs.md) |
|  | Telephone Bearer Service (TBS). |
|  | [Telephone and Media Audio Profile (TMAP)](group__bt__tmap.md) |
|  | Telephone and Media Audio Profile (TMAP). |
|  | [UUIDs](group__bt__uuid.md) |
|  | UUIDs. |
|  | [Volume Control Profile (VCP)](group__bt__vcp.md) |
|  | Volume Control Profile (VCP). |
|  | [Volume Offset Control Service (VOCS)](group__bt__vocs.md) |
|  | Volume Offset Control Service (VOCS). |

## Detailed Description

Bluetooth APIs.

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.0.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
